--- a/_posts/2013-03-18-the-fuck.md
+++ b/_posts/2013-03-18-the-fuck.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Example post
+title: Hello, bitches
 ---
 
 {{ page.title }}
 ================
 
-This is an example post
+Hunker down.
