--- a/_posts/2013-03-18-the-fuck.md
+++ b/_posts/2013-03-18-the-fuck.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: Hello, bitches
+title: What is this?
 ---
 
 {{ page.title }}
 ----------------
 
-Hunker down.
+Jekyll + Unicorn + Turbolinks.
+
+*ZOOOOOOOM*
