Fucking exif shit

--- a/_posts/2013-06-28-a-robot.md
+++ b/_posts/2013-06-28-a-robot.md
@@ -6,4 +6,4 @@ title: A. Robot
 {{ page.title }}
 ----------------
 
-![His name is Amanda](https://raw.github.com/revdan/art/master/a-robot.jpg)
+![His name is Amanda](http://i.imgur.com/36Ufil0.jpg)
